--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,7 @@
-site_name: Feinstaubsensor
+site_name: Feinstaubsensor - Makerspace Repair-Café Hilpoldstein
+site_url: https://makes-hacks-hip.github.io
+nav:
+    - Repair-Café: https://www.repaircafe-hilpoltstein.de
+    - Makerspace: https://makes-hacks-hip.de
+    - Makerspace@Github: https://makes-hacks-hip.github.io
+theme: readthedocs
