--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Feinstaubsensor - Makerspace Repair-Café Hilpoldstein
+site_name: Feinstaubsensor - Makerspace Repair-Café Hilpoltstein
 site_url: https://makes-hacks-hip.github.io
 nav:
     - Repair-Café: https://www.repaircafe-hilpoltstein.de
