--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,9 @@
 site_name: Feinstaubsensor - Makerspace Repair-Café Hilpoltstein
-site_url: https://makes-hacks-hip.github.io
+site_url: https://github.com/makes-hacks-hip/Feinstaubsensor
 nav:
     - Repair-Café: https://www.repaircafe-hilpoltstein.de
     - Makerspace: https://makes-hacks-hip.de
     - Makerspace@Github: https://makes-hacks-hip.github.io
 theme: readthedocs
+repo_url: https://github.com/makes-hacks-hip/Feinstaubsensor/
+edit_uri: edit/main/docs/
