--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,8 @@ nav:
     - Repair-Café: https://www.repaircafe-hilpoltstein.de
     - Makerspace: https://makes-hacks-hip.de
     - Makerspace@Github: https://makes-hacks-hip.github.io
+    - LoRaWan: lorawan.md
+    - Informationen: infos.md
 theme: readthedocs
 repo_url: https://github.com/makes-hacks-hip/Feinstaubsensor/
 edit_uri: edit/main/docs/
