--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,13 @@
 site_name: Feinstaubsensor - Makerspace Repair-Café Hilpoltstein
 site_url: https://github.com/makes-hacks-hip/Feinstaubsensor
 nav:
-    - Repair-Café: https://www.repaircafe-hilpoltstein.de
-    - Makerspace: https://makes-hacks-hip.de
-    - Makerspace@Github: https://makes-hacks-hip.github.io
-    - LoRaWan: lorawan.md
-    - Informationen: infos.md
+    - 'Repair-Café & Makerspace':
+        - Repair-Café: https://www.repaircafe-hilpoltstein.de
+        - Makerspace: https://makes-hacks-hip.de
+        - Makerspace@Github: https://makes-hacks-hip.github.io
+    - 'Projekt Feinstaubsensor':
+        - LoRaWan: lorawan.md
+        - Informationen: infos.md
 theme: readthedocs
 repo_url: https://github.com/makes-hacks-hip/Feinstaubsensor/
 edit_uri: edit/main/docs/
